Ability to get cars with given model id.
