# backend/src/entities/models/model.routes.ts
@@ -10,6 +10,7 @@ modelRouter.get('/', modelController.get)
 modelRouter.get('/:id', modelController.getById)
 modelRouter.put('/:id', modelController.updateById)
 modelRouter.delete('/:id', modelController.deleteById)
+modelRouter.get('/:id/cars', modelController.getCarsById)
 // modelRouter.get('/fill', modelController.fill)
 
 export default modelRouter
